# BallFountain

./: Ball.cpp  Ball.h  BallMotion.cpp  BallMotion.hpp  BallPhysicsEquations.cpp  BallPhysicsEquations.h  CMakeLists.txt  OSGFunctions.cpp  OSGFunctions.h  OSGWidget.cpp  OSGWidget.h  UpdateBallPhysics.cpp  UpdateBallPhysics.hpp  calculate_drag_force.cpp  calculate_new_acceleration.cpp  calculate_new_position.cpp  calculate_new_velocity.cpp  get_position.cpp  mainwindow.cpp  mainwindow.h  mainwindowform.ui  physicsWorld.cpp  physicsWorld.hpp  set_initial_velocity.cpp  sphereupdatecallback.cpp  sphereupdatecallback.h  update_ball_acceleration_tests.cpp
